# txtandimg2img

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
anime2d/: __init__.py  cli.py
anime2d/data/: visemes.json
anime2d/generate/: __init__.py  art.py  upscale.py
anime2d/split/: __init__.py  split.py
anime2d/utils/: config.py  paths.py
configs/: default.yaml
web/: index.html  package-lock.json  package.json  tailwind.config.cjs
web/src/: App.tsx
webapi/: main.py
